--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tarojs/runtime": "3.6.1",
     "@tarojs/shared": "3.6.1",
     "@tarojs/taro": "3.6.1",
+    "pinia": "^2.1.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.6.1",
     "eslint-plugin-vue": "^8.0.0",
+    "sass-loader": "^13.3.2",
     "style-loader": "1.3.0",
     "stylelint": "9.3.0",
     "ts-node": "^10.9.1",
