--- a/project.config.json
+++ b/project.config.json
@@ -2,9 +2,10 @@
   "miniprogramRoot": "dist/",
   "projectname": "taro-vue3",
   "description": "久心团队为政府机构推出的app解决方案",
-  "appid": "wxb6995900a42431c9",
+  "appid": "wx87eed2c15caaca73",
   "setting": {
     "urlCheck": true,
+    "ignoreDevUnusedFiles":false,
     "es6": false,
     "enhance": false,
     "compileHotReLoad": false,
