--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,8 @@
 {
   "miniprogramRoot": "dist/",
   "projectname": "taro-vue3",
-  "description": "久心团队为政府机构推出的app解决方案",
-  "appid": "wx87eed2c15caaca73",
+  "description": "久心团队为MiniAED客户的app解决方案",
+  "appid": "wx53f7a8f88ed71bad",
   "setting": {
     "urlCheck": true,
     "ignoreDevUnusedFiles":false,
